vungle ads impliment and reward ads

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,11 @@
         android:text="Qureka"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <Button
+        android:onClick="MAXRevordAds"
+        android:text="MaX Reword Ads"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <include
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
