--- a/newAds2021/src/main/res/layout/max_native_sample.xml
+++ b/newAds2021/src/main/res/layout/max_native_sample.xml
@@ -13,7 +13,7 @@
         android:layout_centerInParent="true"/>
 
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/MAX_native_ad_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
