--- a/newAds2021/src/main/res/layout/custom_inter.xml
+++ b/newAds2021/src/main/res/layout/custom_inter.xml
@@ -5,13 +5,12 @@
     android:layout_height="match_parent">
 
 
-
     <LinearLayout
         android:id="@+id/rv"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="#0C0C0C"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_inter_info"
@@ -19,32 +18,53 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_info_ad"
             android:layout_margin="2dp"
-            android:tint="#FBF9FA"/>
+            android:src="@drawable/ic_info_ad"
+            android:tint="#FBF9FA" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
-            android:paddingHorizontal="5dp"
             android:gravity="center"
-            android:visibility="visible"
+            android:paddingHorizontal="5dp"
             android:text="AD"
             android:textColor="#FAF8F9"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/txt_skip_ad"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:gravity="right"
-            android:visibility="visible"
-            android:paddingHorizontal="5dp"
-            android:paddingVertical="5dp"
-            android:text=" Skip Ad in 5 sec "
-            android:textColor="#FAF8F9"
-            android:textSize="14sp" />
+            android:gravity="right">
+
+            <TextView
+                android:id="@+id/txt_skip_ad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:paddingHorizontal="5dp"
+                android:paddingVertical="5dp"
+                android:text=" Skip Ad in 5 sec "
+                android:textColor="#FAF8F9"
+                android:textSize="14sp"
+                android:visibility="visible" />
+
+            <ImageView
+                android:id="@+id/iv_close_ad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingEnd="5dp"
+                android:src="@drawable/ic_close_ad"
+                android:visibility="invisible"/>
+
+
+        </LinearLayout>
+
+
 
 
     </LinearLayout>
@@ -53,8 +73,8 @@
     <WebView
         android:id="@+id/interWebview"
         android:layout_width="match_parent"
-        android:layout_below="@id/rv"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/rv" />
 
 
 </RelativeLayout>
